--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -16,6 +16,6 @@ X-Plasma-API=declarativeappletscript
 X-Plasma-MainScript=ui/main.qml
 X-Plasma-RemoteLocation=
 X-KDE-PluginInfo-Category=System Information
-Icon=utilities-system-monitor
+Icon=chronometer
 #prefix for Icon is: /usr/share/icons/breeze/actions/toolbar/
 #copy this file into ~/.local/share/kservices5
